--- a/tupapp-master/TUPApp/Views/Emergencies/Delete.cshtml
+++ b/tupapp-master/TUPApp/Views/Emergencies/Delete.cshtml
@@ -39,7 +39,8 @@
             @Html.DisplayNameFor(model => model.Student)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Student.Id)
+            @Html.DisplayFor(model => model.Student.Firstname)
+            @Html.DisplayFor(model => model.Student.Lastname)
         </dd>
     </dl>
     
