--- a/tupapp-master/TUPApp/Views/Home/Resume.cshtml
+++ b/tupapp-master/TUPApp/Views/Home/Resume.cshtml
@@ -31,7 +31,7 @@
                     <div class="col-md-11">
                         <h3 class="text-uppercase">Summary</h3>
                         <hr style="width: 50%; height: 2px; margin-left: auto;margin-right: auto;">
-                        <p style="text-align:justify">@Model.Summary</p>
+                        <p style="text-align:justify;">@Model.Summary</p>
                     </div>
                 </div>
                 @*End of Description section*@
