--- a/tupapp-master/TUPApp/Views/Trainings/Index.cshtml
+++ b/tupapp-master/TUPApp/Views/Trainings/Index.cshtml
@@ -45,9 +45,9 @@
             </td>
             <td>
                 <td>
-                    <button type="button" class="btn btn-warning"><a class="text-light text-decoration-none" asp-action="Edit" asp-route-id="@item.Id">Edit</a></button>
-                    <button type="button" class="btn btn-primary"><a class="text-light text-decoration-none" asp-action="Details" asp-route-id="@item.Id">Details</a></button>
-                    <button type="button" class="btn btn-danger"><a class="text-light text-decoration-none" asp-action="Delete" asp-route-id="@item.Id">Delete</a></button>
+                    <button type="button" class="btn btn-warning"><a class="text-light text-decoration-none" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square text-light"></i></a></button>
+                    <button type="button" class="btn btn-primary"><a class="text-light text-decoration-none" asp-action="Details" asp-route-id="@item.Id"><i class="bi bi-view-list text-light"></i></a></button>
+                    <button type="button" class="btn btn-danger"><a class="text-light text-decoration-none" asp-action="Delete" asp-route-id="@item.Id"><i class="bi bi-trash3 text-light"></i></a></button>
                 </td>
             </td>
         </tr>
